# pinplay-tools

./: .gitignore  .gitmodules  LICENSE  README.md  third-party-programs.txt
DCFG/: README.md
DrDebug/: README.md  install.drdebug.sh
Examples/: README.make.txt  README.mbuild.txt  bimodal.H  install.drdebug.sh  makefile.rules  makefile.txt  mbuild.txt  mfile.py  pinplay-branch-predictor.cpp  pinplay-debugger-shell.H  pinplay-debugger.cpp  pinplay-driver.cpp  pinplay_controller.cpp  pinplay_debugtrace.cpp  pinplay_isimpoint.cpp  pinplay_strace.cpp  pinplayatrace.cpp
Examples/GPU-KernelTracer/: README.md
Examples/GPU-KernelTracer/CPUPinTool/: clean.sh  mfile.py  pin.build.sh  sde.build.sh  xpu-pin-kerneltracer.cpp
Examples/GPU-KernelTracer/GTPinTool/: GTPinShim.cpp
Examples/GPU-KernelTracer/Include/: GTPinLoaderShim.H  GTPinShim.h
Examples/GPU-KernelTracer/Intel-GPU/GTPinTool/: CMakeLists.txt
Examples/GPU-KernelTracer/NVIDIA-GPU/: README.md
Examples/non-PinCRT-dll/: README.md  clean.sh  dllLoader.H  dllinfo.h  dlopen-driver.cpp  makefile.rules  mfile.py  pin.build.sh  sde.build.sh  use-myfunction.cpp
Examples/non-PinCRT-dll/MyLib/: Makefile  mydll.c
GlobalLoopPoint/: README.md  sde-build-GlobalLoopPoint.sh
GlobalLoopPoint/EventCounter/: README  global_event_icounter.cpp  makefile.rules
PinPoints/: README.md  gem5_example_elfie_conf.py.txt  sde-pin-build-PinPoints.sh
PinPoints/Documents/: README.md
PinPoints/Test/: Makefile  README.ROIperf-validation  README.elfie-sniper-gem5  create.gem5__region_simulation_configs.sh  create.gem5__region_simulation_scripts.sh  create.sde_bin_region_event_icount.sh  create.sniper_region_simulation_scripts.sh  dotproduct-st.1.cfg  extrapolate.py  run.ROIPerf-validation.sh  run.pinball-sysstate-consume.sh  run.pinball2elf.sh  run.regionbinperf.sh  run.sde.binary.log.sh  run.wpROIperf.sh  runall.rgnbinperf.sh  sde-run.pinpoints.single-threaded.sh
STAPIN/: README.md
STAPIN/STAPIN-Tools/: README.md
STAPIN/STAPIN-Tools/Tools/ProbeMode/ProbeFuncArgs/: CMakeLists.txt  funcArgsProbeTool.cpp  hello.cpp  run.probe.sh
STAPIN/STAPIN-Tools/Tools/STAPINPerf/: CMakeLists.txt  Makefile  STAPINPerf.cpp
STAPIN/STAPINLibPlugin/: CMakeLists.txt  Makefile
STAPIN/STAPINLibPlugin/CaseStudies/LineNumberTracker/: CMakeLists.txt  Makefile
STAPIN/STAPINLibPlugin/CaseStudies/SymbolLocationTracker/: CMakeLists.txt  SymbolLocationTracker.cpp
STAPIN/STAPINLibPlugin/examples/ExpressionEvaluation/: CMakeLists.txt  ExpressionEval.cpp
STAPIN/STAPINLibPlugin/examples/Symbols/: CMakeLists.txt  getSymbolsExample.cpp
STAPIN/STAPINLibPlugin/examples/getSourceLocation/: CMakeLists.txt  getsourcelocation.cpp
STAPIN/STAPINLibPlugin/examples/testApps/Expressions/: CMakeLists.txt  expressionsTest.cpp
STAPIN/STAPINLibPlugin/examples/testApps/TypeName/: CMakeLists.txt  typeNameTest.c  typeNameTest.cpp
STAPIN/STAPINLibPlugin/lib/: .clang-format  CMakeLists.txt  buffer_pool.cpp  stapin.cpp
STAPIN/STAPINLibPlugin/lib/include/: buffer_pool.h  enum_utils.h  stapin.h
STAPIN/STAPINLibPlugin/server/: CMakeLists.txt  server-utils.h  stapin-context.cpp  stapin-context.h  stapin-plugin-TCF-and-context-logic.cpp  stapin-plugin-TCF-and-context-logic.h  stapin-plugin-expressions-logic.cpp  stapin-plugin-expressions-logic.h  stapin-plugin-image-logic.cpp  stapin-plugin-image-logic.h  stapin-plugin-sourceLocation-logic.cpp  stapin-plugin-sourceLocation-logic.h  stapin-plugin-symbols-and-expressions-logic.cpp  stapin-plugin-symbols-and-expressions-logic.h  stapin-plugin-symbols-logic.cpp  stapin-plugin-symbols-logic.h  stapin-plugin.cpp
STAPIN/STAPINLibPlugin/server/include/: stapin_schemas.h
STAPIN/STAPINLibPlugin/tcf/: CMakeLists.txt
STAPIN/STAPINLibPlugin/tcf/machine/i386/tcf/: cpu-regs-gdb.h  cpudefs-mdep.c  disassembler-i386.h  dwarfreloc-mdep.h  regset-mdep.h
STAPIN/STAPINLibPlugin/tcf/machine/i686/tcf/: cpudefs-mdep.h  disassembler-i686.c
STAPIN/STAPINLibPlugin/tcf/machine/x86_64/tcf/: cpu-regs-gdb.h  cpudefs-mdep.c  cpudefs-mdep.h  disassembler-x86_64.c  disassembler-x86_64.h  dwarfreloc-mdep.h  regset-mdep.h
STAPIN/STAPINLibPlugin/tcf/system/PINOS/tcf/: regset.h
dotproduct-omp/: LICENSE.dotproduct-omp  LICENSE.scripts  Makefile  README  README.ROIperf-validation  active.env.sh  create.run.pccount_event_icount.sh  create.sde_bin_region_event_icount.sh  create.sde_pinball_region_event_icount.sh  dot_product_openmp.cpp  dotproduct.1.cfg  passive.env.sh  pcregion_lengths.sh  pinplay-looppoint.sh  run.sysstate.sh  run.wpROIperf.sh  runall.rgnbinperf.sh  sde-run.barrierpoint.global_barrierpoint.sh  sde-run.bbpoint.per-thread-pccount_regions.sh  sde-run.looppoint.global_looppoint.basic.sh  sde-run.looppoint.global_looppoint.concat.filter.flowcontrol.sh
openmp/: Makefile  README  README.ROIperf-validation  clean_slate.sh  create.gem5__region_simulation_configs.sh  create.gem5__region_simulation_scripts.sh  create.run.pccount_event_icount.sh  create.sde_pinball_region_event_icount.sh  create.sniper_region_simulation_scripts.sh  dot_product_st.cpp  extrapolate.py  run.ROIPerf-validation.sh  run.elfies.sh  run.pinball-sysstate-consume.sh  run.pinball-sysstate.sh  run.pinball2elf.sh  run.sysstate.sh  run.wpROIperf.sh  runall.region-event-icounter.sh  runall.rgnbinperf.sh  sde-run.barrierpoint.global_barrierpoint.sh  sde-run.looppoint.global_looppoint.basic.sh  sde-run.looppoint.global_looppoint.concat.filter.flowcontrol.sh  sde-run.pinpoints.single-threaded.sh
pinplay-scripts/: README.simpoint  cmd_options.py  config.py  correct_size_matrix.py  drd_util.py  gdb_record.notworking  gdb_record.py.notworking  gdb_replay.py  kit.py  log.py  logger.py  make-balanced-concat-vectors.py  make_simpoint_weights.py  msg.py  pb_weight.py  pcregions.py  phases.py  pin.py  pinpoints.py  record  record.py  regions.py  relog  relog.py  replay  replay.py  replay_dir.py  replayer.py  sde_kit.py  sde_log.py  sde_logger.py  sde_phases.py  sde_pinpoints.py  sde_replay_dir.py  sde_replayer.py  sim_kit.py  sim_run.py  sim_run_dir.py  simpoint.py  split.pc-csvfile.py  (+3 more)
(+53 files in other folders)
